--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-boost": "^0.4.9",
-    "apollo-server-express": "^3.3.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.1"
+    "dotenv": "^10.0.0"
   }
 }
