--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
-  "dependencies": {
-    "dotenv": "^10.0.0"
-  }
+  "dependencies": {}
 }
